bug fix on github link

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         </li>
         <li>
           <a
-            href="https://github.csom/eurodrigogadelha"
+            href="https://github.com/eurodrigogadelha"
             target="_blank
           "
             >GITHUB</a
